--- a/django_test/blog/templates/index_gcs.html
+++ b/django_test/blog/templates/index_gcs.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8">  
+    <link rel="shortcut icon" href="#" />  
     <!-- LEAFLET -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
@@ -12,10 +13,10 @@
       integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
       crossorigin=""></script>
     <!-- END LEAFLET -->
-    <title>GCS</title>
+    <title>Drone Server</title>
   </head>
   <body>
-    <h1>Copter GCS Map</h1>
+    <h1>Drone Server</h1>
     <hr/>    
     <!-- LEAFLET -->    
     <div id="mapid" style = "width:900px; height:580px;"></div>
