--- a/django_test/blog/templates/about.html
+++ b/django_test/blog/templates/about.html
@@ -1,7 +1,251 @@
-<!DOCTYPE html>
-<html>
-    <head></head>
-    <body>
-        <h1>Author: Steve</h1>
-    </body>
+<!doctype html>
+<html lang="en">/
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>NTOU Drone Server</title>
+    <style type="text/css">
+        
+        
+        .path{
+            background-color:mintcream;
+        }
+        .path .breadcrumb{
+            background-color: transparent;
+        }
+        .main-footer{
+          background-color: black;
+          color: white;
+          padding: 20px 0;
+        }
+    </style>
+  </head>
+  <body>
+
+    <!--img src="https://picsum.photos/1920/400?random=1"-->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>    
+
+    <!--div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4"><strong>Drone Server</strong></h1>
+            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        </div>
+    </!--div-->
+
+
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://i.picsum.photos/id/666/1800/400.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1 >Drone Server</h1>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://i.picsum.photos/id/69/1800/400.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1>GCS</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://i.picsum.photos/id/129/1800/400.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1>Stream video</h1>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+    <div class="path">
+        <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="#"><strong>Home</strong></a></li>
+                  <li class="breadcrumb-item"><a href="#"><strong>GCS</strong></a></li>
+                  <li class="breadcrumb-item active" aria-current="page"><strong>Data</strong></li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-3">
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action active">
+                      Cras justo odio
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+                    <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+                    <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+                    <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Vestibulum at eros</a>
+                  </div>
+            </div> 
+            <div class="col-12 col-md-9">
+                <h1>Introduce</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Similique laboriosam accusantium in obcaecati illum facere! 
+                    Perspiciatis delectus ut laudantium dolor nobis voluptas nostrum 
+                    accusantium sit eius, non esse harum illo.</p>
+                <div class="row">
+                    <div class="col-12 col-md-3">
+                        <div class="item">
+                            <img src="https://picsum.photos/300/200?=666" class="img-fluid">
+                            <h3>title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Aliquam minima, porro laborum ex eius aut beatae nobis?</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="item">
+                            <img src="https://picsum.photos/300/200?=36" class="img-fluid">
+                            <h3>title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Aliquam minima, porro laborum ex eius aut beatae nobis?</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="item">
+                            <img src="https://picsum.photos/300/200?=39" class="img-fluid">
+                            <h3>title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Aliquam minima, porro laborum ex eius aut beatae nobis?</p> 
+                            
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="item">
+                            <img src="https://picsum.photos/300/200?=40" class="img-fluid">
+                            <h3>title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Aliquam minima, porro laborum ex eius aut beatae nobis?</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="item">
+                            <img src="https://picsum.photos/300/200?=4" class="img-fluid">
+                            <h3>title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Aliquam minima, porro laborum ex eius aut beatae nobis?</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="item">
+                            <img src="https://picsum.photos/300/200?=3" class="img-fluid">
+                            <h3>title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Aliquam minima, porro laborum ex eius aut beatae nobis?</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="item">
+                            <img src="https://picsum.photos/300/200?=2" class="img-fluid">
+                            <h3>title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Aliquam minima, porro laborum ex eius aut beatae nobis?</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="item">
+                            <img src="https://picsum.photos/300/200?=1" class="img-fluid">
+                            <h3>title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Aliquam minima, porro laborum ex eius aut beatae nobis?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="page">
+                  <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                          <span aria-hidden="true">&laquo;</span>
+                        </a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="#">1</a></li>
+                      <li class="page-item"><a class="page-link" href="#">2</a></li>
+                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                          <span aria-hidden="true">&raquo;</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+            </div>
+               
+        </div>    
+    </div>
+      
+
+
+    <div class="container-fluid main-footer text-center">
+      &copy; copyright by YU-HSIEN LIAO
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 </html>
