--- a/django_test/blog/templates/about.html
+++ b/django_test/blog/templates/about.html
@@ -81,21 +81,21 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://i.picsum.photos/id/666/1800/400.jpg" class="d-block w-100" alt="...">
+          <img src="https://picsum.photos/1920/400?random=1" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1 >Drone Server</h1>
             <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://i.picsum.photos/id/69/1800/400.jpg" class="d-block w-100" alt="...">
+          <img src="https://picsum.photos/1920/400?random=2" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>GCS</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://i.picsum.photos/id/129/1800/400.jpg" class="d-block w-100" alt="...">
+          <img src="https://picsum.photos/1920/400?random=3" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>Stream video</h1>
             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
